headers/x.v


pub fn iupuser() voidptr {
	return C.IupUser()
}

fn C.IupThread() voidptr

pub fn iupthread() voidptr {
	return C.IupThread()
}

fn C.IupLabel(title &i8) voidptr

pub fn iuplabel(title &i8) voidptr {
	return C.IupLabel(title)
}

fn C.IupList(action &i8) voidptr

pub fn iuplist(action &i8) voidptr {
	return C.IupList(action)
}

fn C.IupFlatList() voidptr

pub fn iupflatlist() voidptr {
	return C.IupFlatList()
}

fn C.IupText(action &i8) voidptr

pub fn iuptext(action &i8) voidptr {
	return C.IupText(action)
}

fn C.IupMultiLine(action &i8) voidptr

pub fn iupmultiline(action &i8) voidptr {
	return C.IupMultiLine(action)
}

fn C.IupToggle(title &i8, action &i8) voidptr

pub fn iuptoggle(title &i8, action &i8) voidptr {
	return C.IupToggle(title, action)
}

fn C.IupTimer() voidptr

pub fn iuptimer() voidptr {
	return C.IupTimer()
}

fn C.IupClipboard() voidptr

pub fn iupclipboard() voidptr {
	return C.IupClipboard()
}

fn C.IupProgressBar() voidptr

pub fn iupprogressbar() voidptr {
	return C.IupProgressBar()
}

fn C.IupVal(type_ &i8) voidptr

pub fn iupval(type_ &i8) voidptr {
	return C.IupVal(type_)
}

fn C.IupFlatVal(type_ &i8) voidptr

pub fn iupflatval(type_ &i8) voidptr {
	return C.IupFlatVal(type_)
}

fn C.IupFlatTree() voidptr

pub fn iupflattree() voidptr {
	return C.IupFlatTree()
}

[c2v_variadic]
fn C.IupTabs(child voidptr) voidptr

pub fn iuptabs(child voidptr) voidptr {
	return C.IupTabs(child)
}

fn C.IupTabsv(children &voidptr) voidptr

pub fn iuptabsv(children &voidptr) voidptr {
	return C.IupTabsv(children)
}

[c2v_variadic]
fn C.IupFlatTabs(first voidptr) voidptr

pub fn iupflattabs(first voidptr) voidptr {
	return C.IupFlatTabs(first)
}

fn C.IupFlatTabsv(children &voidptr) voidptr

pub fn iupflattabsv(children &voidptr) voidptr {
	return C.IupFlatTabsv(children)
}

fn C.IupTree() voidptr

pub fn iuptree() voidptr {
	return C.IupTree()
}

fn C.IupLink(url &i8, title &i8) voidptr

pub fn iuplink(url &i8, title &i8) voidptr {
	return C.IupLink(url, title)
}

fn C.IupAnimatedLabel(animation voidptr) voidptr

pub fn iupanimatedlabel(animation voidptr) voidptr {
	return C.IupAnimatedLabel(animation)
}

fn C.IupDatePick() voidptr

pub fn iupdatepick() voidptr {
	return C.IupDatePick()
}

fn C.IupCalendar() voidptr

pub fn iupcalendar() voidptr {
	return C.IupCalendar()
}

fn C.IupColorbar() voidptr

pub fn iupcolorbar() voidptr {
	return C.IupColorbar()
}

fn C.IupGauge() voidptr

pub fn iupgauge() voidptr {
	return C.IupGauge()
}

fn C.IupDial(type_ &i8) voidptr

pub fn iupdial(type_ &i8) voidptr {
	return C.IupDial(type_)
}

fn C.IupColorBrowser() voidptr

pub fn iupcolorbrowser() voidptr {
	return C.IupColorBrowser()
}

fn C.IupSpin() voidptr

pub fn iupspin() voidptr {
	return C.IupSpin()
}

fn C.IupSpinbox(child voidptr) voidptr

pub fn iupspinbox(child voidptr) voidptr {
	return C.IupSpinbox(child)
}

fn C.IupStringCompare(str1 &i8, str2 &i8, casesensitive int, lexicographic int) int

pub fn iupstringcompare(str1 &i8, str2 &i8, casesensitive int, lexicographic int) int {
	return C.IupStringCompare(str1, str2, casesensitive, lexicographic)
}

fn C.IupSaveImageAsText(ih voidptr, filename &i8, format &i8, name &i8) int

pub fn iupsaveimageastext(ih voidptr, filename &i8, format &i8, name &i8) int {
	return C.IupSaveImageAsText(ih, filename, format, name)
}

fn C.IupImageGetHandle(name &i8) voidptr

pub fn iupimagegethandle(name &i8) voidptr {
	return C.IupImageGetHandle(name)
}

fn C.IupTextConvertLinColToPos(ih voidptr, lin int, col int, pos &int) 

pub fn iuptextconvertlincoltopos(ih voidptr, lin int, col int, pos &int)  {
	C.IupTextConvertLinColToPos(ih, lin, col, pos)
}

fn C.IupTextConvertPosToLinCol(ih voidptr, pos int, lin &int, col &int) 

pub fn iuptextconvertpostolincol(ih voidptr, pos int, lin &int, col &int)  {
	C.IupTextConvertPosToLinCol(ih, pos, lin, col)
}

fn C.IupConvertXYToPos(ih voidptr, x int, y int) int

pub fn iupconvertxytopos(ih voidptr, x int, y int) int {
	return C.IupConvertXYToPos(ih, x, y)
}

fn C.IupStoreGlobal(name &i8, value &i8) 

pub fn iupstoreglobal(name &i8, value &i8)  {
	C.IupStoreGlobal(name, value)
}

fn C.IupStoreAttribute(ih voidptr, name &i8, value &i8) 

pub fn iupstoreattribute(ih voidptr, name &i8, value &i8)  {
	C.IupStoreAttribute(ih, name, value)
}

[c2v_variadic]
fn C.IupSetfAttribute(ih voidptr, name &i8, format &i8) 

pub fn iupsetfattribute(ih voidptr, name &i8, format &i8)  {
	C.IupSetfAttribute(ih, name, format)
}

fn C.IupStoreAttributeId(ih voidptr, name &i8, id int, value &i8) 

pub fn iupstoreattributeid(ih voidptr, name &i8, id int, value &i8)  {
	C.IupStoreAttributeId(ih, name, id, value)
}

[c2v_variadic]
fn C.IupSetfAttributeId(ih voidptr, name &i8, id int, f &i8) 

pub fn iupsetfattributeid(ih voidptr, name &i8, id int, f &i8)  {
	C.IupSetfAttributeId(ih, name, id, f)
}

fn C.IupStoreAttributeId2(ih voidptr, name &i8, lin int, col int, value &i8) 

pub fn iupstoreattributeid2(ih voidptr, name &i8, lin int, col int, value &i8)  {
	C.IupStoreAttributeId2(ih, name, lin, col, value)
}

[c2v_variadic]
fn C.IupSetfAttributeId2(ih voidptr, name &i8, lin int, col int, format &i8) 

pub fn iupsetfattributeid2(ih voidptr, name &i8, lin int, col int, format &i8)  {
	C.IupSetfAttributeId2(ih, name, lin, col, format)
}

fn C.IupTreeSetUserId(ih voidptr, id int, userid voidptr) int

pub fn iuptreesetuserid(ih voidptr, id int, userid voidptr) int {
	return C.IupTreeSetUserId(ih, id, userid)
}

fn C.IupTreeGetUserId(ih voidptr, id int) voidptr

pub fn iuptreegetuserid(ih voidptr, id int) voidptr {
	return C.IupTreeGetUserId(ih, id)
}

fn C.IupTreeGetId(ih voidptr, userid voidptr) int

pub fn iuptreegetid(ih voidptr, userid voidptr) int {
	return C.IupTreeGetId(ih, userid)
}

fn C.IupTreeSetAttributeHandle(ih voidptr, name &i8, id int, ih_named voidptr) 

pub fn iuptreesetattributehandle(ih voidptr, name &i8, id int, ih_named voidptr)  {
	C.IupTreeSetAttributeHandle(ih, name, id, ih_named)
}

fn C.IupFileDlg() voidptr

pub fn iupfiledlg() voidptr {
	return C.IupFileDlg()
}

fn C.IupMessageDlg() voidptr

pub fn iupmessagedlg() voidptr {
	return C.IupMessageDlg()
}

fn C.IupColorDlg() voidptr

pub fn iupcolordlg() voidptr {
	return C.IupColorDlg()
}

fn C.IupFontDlg() voidptr

pub fn iupfontdlg() voidptr {
	return C.IupFontDlg()
}

fn C.IupProgressDlg() voidptr

pub fn iupprogressdlg() voidptr {
	return C.IupProgressDlg()
}

fn C.IupGetFile(arq &i8) int

pub fn iupgetfile(arq &i8) int {
	return C.IupGetFile(arq)
}

fn C.IupMessage(title &i8, msg &i8) 

pub fn iupmessage(title &i8, msg &i8)  {
	C.IupMessage(title, msg)
}

[c2v_variadic]
fn C.IupMessagef(title &i8, format &i8) 

pub fn iupmessagef(title &i8, format &i8)  {
	C.IupMessagef(title, format)
}

fn C.IupMessageError(parent voidptr, message &i8) 

pub fn iupmessageerror(parent voidptr, message &i8)  {
	C.IupMessageError(parent, message)
}

fn C.IupMessageAlarm(parent voidptr, title &i8, message &i8, buttons &i8) int

pub fn iupmessagealarm(parent voidptr, title &i8, message &i8, buttons &i8) int {
	return C.IupMessageAlarm(parent, title, message, buttons)
}

fn C.IupAlarm(title &i8, msg &i8, b1 &i8, b2 &i8, b3 &i8) int

pub fn iupalarm(title &i8, msg &i8, b1 &i8, b2 &i8, b3 &i8) int {
	return C.IupAlarm(title, msg, b1, b2, b3)
}

[c2v_variadic]
fn C.IupScanf(format &i8) int

pub fn iupscanf(format &i8) int {
	return C.IupScanf(format)
}

fn C.IupListDialog(type_ int, title &i8, size int, list &&u8, op int, max_col int, max_lin int, marks &int) int

pub fn iuplistdialog(type_ int, title &i8, size int, list &&u8, op int, max_col int, max_lin int, marks &int) int {
	return C.IupListDialog(type_, title, size, list, op, max_col, max_lin, marks)
}

fn C.IupGetText(title &i8, text &i8, maxsize int) int

pub fn iupgettext(title &i8, text &i8, maxsize int) int {
	return C.IupGetText(title, text, maxsize)
}

fn C.IupGetColor(x int, y int, r &u8, g &u8, b &u8) int

pub fn iupgetcolor(x int, y int, r &u8, g &u8, b &u8) int {
	return C.IupGetColor(x, y, r, g, b)
}

type Iparamcb = fn (voidptr, int, voidptr) int
[c2v_variadic]
fn C.IupGetParam(title &i8, action Iparamcb, user_data voidptr, format &i8) int

pub fn iupgetparam(title &i8, action Iparamcb, user_data voidptr, format &i8) int {
	return C.IupGetParam(title, action, user_data, format)
}

fn C.IupGetParamv(title &i8, action Iparamcb, user_data voidptr, format &i8, param_count int, param_extra int, param_data &voidptr) int

pub fn iupgetparamv(title &i8, action Iparamcb, user_data voidptr, format &i8, param_count int, param_extra int, param_data &voidptr) int {
	return C.IupGetParamv(title, action, user_data, format, param_count, param_extra, param_data)
}

fn C.IupParam(format &i8) voidptr

pub fn iupparam(format &i8) voidptr {
	return C.IupParam(format)
}

[c2v_variadic]
fn C.IupParamBox(param voidptr) voidptr

pub fn iupparambox(param voidptr) voidptr {
	return C.IupParamBox(param)
}

fn C.IupParamBoxv(param_array &voidptr) voidptr

pub fn iupparamboxv(param_array &voidptr) voidptr {
	return C.IupParamBoxv(param_array)
}

fn C.IupLayoutDialog(dialog voidptr) voidptr

pub fn iuplayoutdialog(dialog voidptr) voidptr {
	return C.IupLayoutDialog(dialog)
}

fn C.IupElementPropertiesDialog(parent voidptr, elem voidptr) voidptr

pub fn iupelementpropertiesdialog(parent voidptr, elem voidptr) voidptr {
	return C.IupElementPropertiesDialog(parent, elem)
}

fn C.IupGlobalsDialog() voidptr

pub fn iupglobalsdialog() voidptr {
	return C.IupGlobalsDialog()
}

fn C.IupClassInfoDialog(parent voidptr) voidptr

pub fn iupclassinfodialog(parent voidptr) voidptr {
	return C.IupClassInfoDialog(parent)
}


const ( // empty enum
		iup_show = 1
	iup_restore = 2
	iup_minimize = 3
	iup_maximize = 4
	iup_hide = 5
)


const ( // empty enum
	iup_sbup = 1
	iup_sbdn = 2
	iup_sbpgup = 3
	iup_sbpgdn = 4
	iup_sbposv = 5
	iup_sbdragv = 6
	iup_sbleft = 7
	iup_sbright = 8
	iup_sbpgleft = 9
	iup_sbpgright = 10
	iup_sbposh = 11
	iup_sbdragh = 12
)


const ( // empty enum
	iup_recbinary = 1
	iup_rectext = 2
)

